--- a/demo/src/App.css
+++ b/demo/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -5,9 +7,17 @@
     text-decoration: none;
     list-style: none;
     outline: none;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .container{
-    width: 1200px;
+    max-width: 1072px;
+    width: 100%;
     margin: 0 auto;
+    padding: 0 20px;
 }
+
+
+
+
+
