--- a/demo/src/companents/Button/Button.css
+++ b/demo/src/companents/Button/Button.css
@@ -20,6 +20,11 @@
 }
 
 
+.button--secondary{
+    background-color:  #EBB44A;
+    border: 2px solid #EBB44A;
+}
+
 .button--sm {
     height: 23px;
 }
