--- a/demo/src/pages/Login/Login.css
+++ b/demo/src/pages/Login/Login.css
@@ -1,5 +1,5 @@
 header{
-    display: none;
+    /* display: none; */
 }
 .login{
     width: 100%;
@@ -13,6 +13,7 @@ header{
 }
 
 .login__details{
+    width: 50%;
     padding: 85px 90px;
 }
 
@@ -22,22 +23,33 @@ header{
     
     border-radius: 20px;
     padding: 40px 40px;
+
 }
 
 .login__exam-tests{
+    width: 50%;
     background-image: url('./../../assets/images/OM6UUZ0\ 1.svg');
-    background-position: center;
+    background-position:center;
     background-repeat: no-repeat;
     background-size: cover;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    background-color: red;
+    
+
 }
 
-
+.login__board__heading{
+    margin-bottom: 55px;    
+}
 .login__board__heading h4{
 font-style: normal;
 font-weight: 700;
 font-size: 24px;
 line-height: 33px;
 color: #2B2A2A;
+
+margin-bottom: 7px;
 }
 
 .login__board__heading span{
@@ -46,4 +58,34 @@ font-weight: 500;
 font-size: 16px;
 line-height: 21px;
 color: #8A7E7E;
+}
+
+.login__board__form{
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.login__board__privacy-policy{
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    margin-bottom: 182px;
+}
+
+
+.privacy-policy__text p{
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 22px;
+color: #8A7E7E;
+}
+
+.privacy-policy__text span{
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 19px;
+color: #675AF0;
+cursor: pointer;
 }
