--- a/demo/src/pages/Login/Login.css
+++ b/demo/src/pages/Login/Login.css
@@ -1,6 +1,3 @@
-header{
-    /* display: none; */
-}
 .login{
     width: 100%;
     padding: 82px 53px;
@@ -34,9 +31,6 @@ header{
     background-size: cover;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
-    background-color: red;
-    
-
 }
 
 .login__board__heading{
@@ -61,9 +55,30 @@ color: #8A7E7E;
 }
 
 .login__board__form{
-    width: 100%;
     margin-bottom: 20px;
 }
+
+    .form :nth-child(2){
+        margin-bottom: 15px;
+    }
+
+
+    .forgot__password{
+        display: flex;
+        justify-content: flex-end;
+        margin-top: 6px;
+    }
+    .forgot__password span{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 19px;
+    color: #8A7E7E;
+    }
+    
+    .checkbox{
+        width: 23px;
+    }   
 
 .login__board__privacy-policy{
     display: flex;
