--- a/demo/src/sections/Header/Header.css
+++ b/demo/src/sections/Header/Header.css
@@ -1,10 +1,14 @@
 header{
     width: 100%;
-    padding: 24px 0 23px 0;
+    /* padding: 24px 0 23px 0; */
+    height: 90px;
+    display: flex;
+    align-items: center;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
+    background-color: #FFFFFF;
 }
 
 .header__content{
