--- a/demo/src/pages/Login/Login.css
+++ b/demo/src/pages/Login/Login.css
@@ -1,87 +1,88 @@
-.login{
+.login {
     width: 100%;
     padding: 82px 53px;
-    /* background-color: red; */
 }
 
-.login__content{
+.login__content {
     background: #F5F5FF;
     border-radius: 35px;
     display: flex;
 }
 
-.login__details{
+.login__details {
     width: 50%;
     padding: 85px 90px;
 }
 
-.login__board{
+.login__board {
     background: #FFFFFF;
     box-shadow: 0px 0px 32px -3px rgba(0, 0, 0, 0.15);
-    
+
     border-radius: 20px;
     padding: 40px 40px;
 
 }
 
-.login__exam-tests{
+.login__exam-tests {
     width: 50%;
     background-image: url('./../../assets/images/OM6UUZ0\ 1.svg');
-    background-position:center;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
 }
 
-.login__board__heading{
-    margin-bottom: 55px;    
-}
-.login__board__heading h4{
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 33px;
-color: #2B2A2A;
-
-margin-bottom: 7px;
+.login__board__heading {
+    margin-bottom: 55px;
 }
 
-.login__board__heading span{
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 21px;
-color: #8A7E7E;
+.login__board__heading h4 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 33px;
+    color: #2B2A2A;
+
+    margin-bottom: 7px;
 }
 
-.login__board__form{
+.login__board__heading span {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 21px;
+    color: #8A7E7E;
+}
+
+.login__board__form {
     margin-bottom: 20px;
 }
 
-    .form :nth-child(2){
-        margin-bottom: 15px;
-    }
+.form .input {
+    margin-bottom: 15px;
+}
 
 
-    .forgot__password{
-        display: flex;
-        justify-content: flex-end;
-        margin-top: 6px;
-    }
-    .forgot__password span{
+.forgot__password {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 6px;
+}
+
+.forgot__password__link {
     font-style: normal;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 14px;
     line-height: 19px;
-    color: #8A7E7E;
-    }
-    
-    .checkbox{
-        width: 23px;
-    }   
+    color: #675AF0;   
+}
 
-.login__board__privacy-policy{
+.checkbox {
+    width: 23px;
+}
+
+.login__board__privacy-policy {
     display: flex;
     align-items: center;
     gap: 12px;
@@ -89,19 +90,26 @@ color: #8A7E7E;
 }
 
 
-.privacy-policy__text p{
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 22px;
-color: #8A7E7E;
+.privacy-policy__text p {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+    color: #8A7E7E;
 }
 
-.privacy-policy__text span{
-font-style: normal;
-font-weight: 600;
-font-size: 14px;
-line-height: 19px;
-color: #675AF0;
-cursor: pointer;
+.privacy-policy__text span {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 19px;
+    color: #675AF0;
+}
+
+.privacy-policy__link{
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 19px;
+    color: #675AF0;   
 }
