--- a/demo/src/companents/Button/Button.css
+++ b/demo/src/companents/Button/Button.css
@@ -1,7 +1,7 @@
 .button {
     width: 100%;
     border-radius: 8px;
-    font-weight: 400px;
+    font-weight: 400;
     font-size: 16px;
     line-height: 21px;
     cursor: pointer;
@@ -9,8 +9,8 @@
 
 .button--white {
     background-color: #FFFFFF;
-    color: #3F80BB;
-    border: 2px solid #3F80BB;
+    color: #675AF0;
+    border: 2px solid #675AF0;
 }
 
 .button--white__shadow {
@@ -18,7 +18,7 @@
     box-shadow: 0px 0px 32px -3px rgba(0, 0, 0, 0.15);
     border-radius: 6px;
     border: none;
-    color:  #A39D9D;
+    color: #A39D9D;
 }
 
 
@@ -35,7 +35,8 @@
 }
 
 .button--sm {
-    height: 23px;
+    height: 29px;
+    font-size: 11px;
 }
 
 .button--md {
