--- a/demo/src/pages/Home/Home.css
+++ b/demo/src/pages/Home/Home.css
@@ -1,8 +1,55 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
     outline: none;
+}
+
+.final-exams__content {
+    height: 450px;
+    background: #675AF0;
+}
+
+.final-exams__cards {
+    background: #F5F5FF;
+    box-shadow: 0px 0px 32px -3px rgba(0, 0, 0, 0.15);
+    border-radius: 8px;
+    padding: 24px 18px;
+    transform: translateY(-24px);
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 16px;
+}
+
+.entered-exam__content {
+    padding: 24px 0 60px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.entered-exam__heading {
+    margin-bottom: 16px;
+}
+
+.entered-exam__heading h3 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 33px;
+    color: #675AF0;
+}
+
+.entered-exam__info p {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+    color: #2B2A2A;
 }
