--- a/demo/src/companents/Exam/Exam.css
+++ b/demo/src/companents/Exam/Exam.css
@@ -3,8 +3,8 @@
     background: #FFFFFF;
     box-shadow: 0px 0px 32px -3px rgba(0, 0, 0, 0.15);
     border-radius: 8px;
-    width: 210px;
-    height: 258px;
+    width: 21%;
+    cursor: pointer;
 }
 
 .exam__image {
