--- a/demo/src/pages/Home/Home.css
+++ b/demo/src/pages/Home/Home.css
@@ -45,11 +45,147 @@
     color: #675AF0;
 }
 
-.entered-exam__info p {
+
+
+.entered-exam__text {
+    margin-bottom: 77px;
+}
+
+.entered-exam__text p {
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
     line-height: 25px;
     text-align: center;
+    color: #2B2A2A;
+}
+
+.entered-exam__icons {
+    margin-bottom: 26px;
+}
+
+.entered-exam__info {
+    display: flex;
+    justify-content: space-between;
+    gap: 100px;
+}
+
+.info__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.info__heading span {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
+    color: #8A7E7E;
+}
+
+.info__button {
+    width: 83px;
+    margin-top: 16px;
+}
+
+.mathQuiz-about {
+    width: 100%;
+    background-image: url('../../assets/images/Desktop\ -\ 1.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 0 0 57px 0;
+}
+
+.participate{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.participate__register {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.participate__register h3 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 33px;
+    color: #675AF0;
+}
+
+.participate__register span{
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 21px;
+color: #8A7E7E;
+}
+
+.participate__register__button {
+    width: 118px;
+    margin-top: 16px;
+}
+
+.participate__image{
+    width: 478px;
+    height: 407px;
+    background-image: url('../../assets/images/2293220\ 1.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.participate__image img{
+    width: 100%;
+    height: 100%;
+}
+
+.why-mathQuiz{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.why-mathQuiz__image{
+    width: 407px;
+    height: 407px;
+    background-image: url('../../assets/images/3964546\ 1.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.why-mathQuiz__image img{
+    width: 100%;
+    height: 100%;
+}
+
+
+
+.why-mathQuiz__info__heading{
+    margin-bottom: 31px;
+}
+.why-mathQuiz__info__heading h3{
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 33px;
+color: #675AF0;
+}
+.why-mathQuiz__info__text{
+    gap: 60px;
+    display: flex;
+    flex-direction: column;
+}
+.why-mathQuiz__info__text span{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
     color: #2B2A2A;
 }
