--- a/demo/src/pages/Home/Home.css
+++ b/demo/src/pages/Home/Home.css
@@ -189,3 +189,29 @@ color: #675AF0;
     line-height: 22px;
     color: #2B2A2A;
 }
+
+
+.my-students{
+    width: 100%;
+    padding-bottom: 190px;
+}
+
+.my-students__cards{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.my-students__heading{
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.my-students__heading h3{
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 33px;
+color: #675AF0;
+}
+
