--- a/demo/src/sections/Footer/Footer.css
+++ b/demo/src/sections/Footer/Footer.css
@@ -9,9 +9,11 @@ footer {
     justify-content: space-between;
     margin-bottom: 47px;
 }
-.footer__mathQuiz-about__heading{
+
+.footer__mathQuiz-about__heading {
     margin-bottom: 20px;
 }
+
 .footer__mathQuiz-about__heading h3 {
     font-style: normal;
     font-weight: 700;
@@ -34,9 +36,10 @@ footer {
 }
 
 
-.footer__our-exams__heading{
+.footer__our-exams__heading {
     margin-bottom: 20px;
 }
+
 .footer__our-exams__heading h3 {
     font-style: normal;
     font-weight: 700;
@@ -44,11 +47,13 @@ footer {
     line-height: 27px;
     color: #EBB44A;
 }
-.footer__our-exams__info{
+
+.footer__our-exams__info {
     display: flex;
     flex-direction: column;
     gap: 5px;
 }
+
 .our-exams__links {
     font-style: normal;
     font-weight: 500;
@@ -58,26 +63,26 @@ footer {
 }
 
 
-.footer__support__heading h3{
+.footer__support__heading h3 {
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
     line-height: 27px;
     color: #EBB44A;
     margin-bottom: 20px;
-    
 
-    
+
+
 }
 
 
-.footer__support__info{
+.footer__support__info {
     display: flex;
     flex-direction: column;
     gap: 5px;
 }
 
-.support__links{
+.support__links {
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -85,11 +90,12 @@ footer {
     color: #FFFFFF;
 }
 
-.footer__contacts__end{
+.footer__contacts__end {
     display: flex;
     gap: 50px;
 }
-.footer__contacts{
+
+.footer__contacts {
     /* padding: 16px 0; */
     display: flex;
     justify-content: space-between;
@@ -97,53 +103,55 @@ footer {
     margin-top: 16px;
 }
 
-.contact-number{
+.contact-number {
     display: flex;
     align-items: center;
     gap: 11px;
 }
 
-.contact-number__info h3{
-font-style: normal;
-font-weight: 700;
-font-size: 16px;
-line-height: 22px;
-color: #FFFFFF;
-margin-bottom: 5px;
+.contact-number__info h3 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
+    color: #FFFFFF;
+    margin-bottom: 5px;
 }
 
-.contact-number__info span{
-font-style: normal;
-font-weight: 500;
-font-size: 14px;
-line-height: 19px;
-color: #B4B4B4;
+.contact-number__info span {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 19px;
+    color: #B4B4B4;
 }
 
 
-.location{
+.location {
     display: flex;
     align-items: center;
     gap: 11px;
 }
 
-.location__info h3{
+.location__icons {
+    display: flex;
+    gap: 12px;
+}
+
+.location__info h3 {
     font-style: normal;
-font-weight: 700;
-font-size: 16px;
-line-height: 22px;
-color: #FFFFFF;
-margin-bottom: 5px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
+    color: #FFFFFF;
+    margin-bottom: 5px;
 }
 
 
-.location__info span{
+.location__info span {
     font-style: normal;
-font-weight: 500;
-font-size: 14px;
-line-height: 19px;
-color: #B4B4B4;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 19px;
+    color: #B4B4B4;
 }
-
-
-    
