--- a/demo/src/pages/Home/Home.css
+++ b/demo/src/pages/Home/Home.css
@@ -11,18 +11,28 @@
     height: 450px;
     background: #675AF0;
 }
-
-.final-exams__cards {
+.final-exams__items{
+    display: flex;
+    flex-direction: column;
     background: #F5F5FF;
     box-shadow: 0px 0px 32px -3px rgba(0, 0, 0, 0.15);
-    border-radius: 8px;
-    padding: 24px 18px;
     transform: translateY(-24px);
+    border-radius: 8px;
+}
+
+.final-exams__cards {
+    padding: 24px 18px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 20px;
     margin-bottom: 16px;
+}
+
+.final-exams__button{
+    width: 129px;
+    margin: 0 auto;
+    margin-bottom: 20px;
 }
 
 .entered-exam__content {
