--- a/demo/src/companents/Student/Student.css
+++ b/demo/src/companents/Student/Student.css
@@ -5,6 +5,7 @@
     background: #FFFFFF;
     box-shadow: 0px 0px 32px -3px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
+    margin-bottom: 20px;
 }
 
 .student__image {
