--- a/demo/src/pages/Home/Home.css
+++ b/demo/src/pages/Home/Home.css
@@ -7,11 +7,46 @@
     outline: none;
 }
 
+.content__info h3 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 33px;
+    color: #FFFFFF;
+    margin-bottom: 19px;
+}
+
+.content__info span {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 21px;
+
+    color: #FFFFFF;
+}
+
+.content__info__buttons {
+    gap: 16px;
+    display: flex;
+    margin-top: 45px;
+}
+
+.start__button {
+    width: 129px;
+}
+
+.more__button {
+    width: 129px;
+}
+
 .final-exams__content {
     height: 450px;
     background: #675AF0;
+    display: flex;
+    align-items: center;
 }
-.final-exams__items{
+
+.final-exams__items {
     display: flex;
     flex-direction: column;
     background: #F5F5FF;
@@ -29,7 +64,7 @@
     margin-bottom: 16px;
 }
 
-.final-exams__button{
+.final-exams__button {
     width: 129px;
     margin: 0 auto;
     margin-bottom: 20px;
@@ -80,7 +115,7 @@
     display: flex;
 }
 
-.info__content:nth-child(2){
+.info__content:nth-child(2) {
     margin-left: 90px;
     margin-right: 130px;
 }
@@ -113,7 +148,7 @@
     padding: 0 0 57px 0;
 }
 
-.participate{
+.participate {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -133,12 +168,12 @@
     color: #675AF0;
 }
 
-.participate__register span{
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 21px;
-color: #8A7E7E;
+.participate__register span {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 21px;
+    color: #8A7E7E;
 }
 
 .participate__register__button {
@@ -146,7 +181,7 @@ color: #8A7E7E;
     margin-top: 16px;
 }
 
-.participate__image{
+.participate__image {
     width: 478px;
     height: 407px;
     background-image: url('../../assets/images/2293220\ 1.svg');
@@ -155,18 +190,18 @@ color: #8A7E7E;
     background-size: cover;
 }
 
-.participate__image img{
+.participate__image img {
     width: 100%;
     height: 100%;
 }
 
-.why-mathQuiz{
+.why-mathQuiz {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.why-mathQuiz__image{
+.why-mathQuiz__image {
     width: 407px;
     height: 407px;
     background-image: url('../../assets/images/3964546\ 1.svg');
@@ -175,29 +210,32 @@ color: #8A7E7E;
     background-size: cover;
 }
 
-.why-mathQuiz__image img{
+.why-mathQuiz__image img {
     width: 100%;
     height: 100%;
 }
 
 
 
-.why-mathQuiz__info__heading{
+.why-mathQuiz__info__heading {
     margin-bottom: 31px;
 }
-.why-mathQuiz__info__heading h3{
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 33px;
-color: #675AF0;
+
+.why-mathQuiz__info__heading h3 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 33px;
+    color: #675AF0;
 }
-.why-mathQuiz__info__text{
+
+.why-mathQuiz__info__text {
     gap: 60px;
     display: flex;
     flex-direction: column;
 }
-.why-mathQuiz__info__text span{
+
+.why-mathQuiz__info__text span {
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -206,31 +244,31 @@ color: #675AF0;
 }
 
 
-.my-students{
+.my-students {
     width: 100%;
     padding-bottom: 190px;
 }
 
-.my-students__cards{
+.my-students__cards {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
-.my-students__heading{
+.my-students__heading {
     text-align: center;
     margin-bottom: 30px;
 }
 
-.my-students__heading h3{
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 33px;
-color: #675AF0;
+.my-students__heading h3 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 33px;
+    color: #675AF0;
 }
 
-.my-students__button{
+.my-students__button {
     width: 129px;
     margin: 0 auto;
 }
