--- a/src/companents/Student/Student.css
+++ b/src/companents/Student/Student.css
@@ -27,6 +27,7 @@
     left: 50%;
     transform: translate(-50%, 0%);
     object-fit: cover;
+    z-index: 9999;
 }
 
 .student__info {
@@ -34,7 +35,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 35px;
+    gap: 24px;
     margin-left: 20px;
 }
 
