--- a/src/companents/Student/Student.css
+++ b/src/companents/Student/Student.css
@@ -6,6 +6,7 @@
     box-shadow: 0px 0px 32px -3px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     margin-bottom: 20px;
+    cursor: pointer;
 }
 
 .student__image {
