--- a/src/sections/Header/Header.css
+++ b/src/sections/Header/Header.css
@@ -16,6 +16,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0;
 }
 
 .header__logo {
@@ -27,6 +28,7 @@ header {
     cursor: pointer;
 }
 
+.header__routes__program,
 .header__routes__exam,
 .header__routes__online-videos,
 .header__routes__about {
@@ -39,7 +41,7 @@ header {
 
 .header__routes {
     display: flex;
-    gap: 70px;
+    gap: 50px;
 }
 
 .header__buttons {
