--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -7,7 +7,30 @@
     outline: none;
 }
 
-.content__info h3 {
+.container {
+    max-width: 1072px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.home {
+    width: 100%;
+}
+
+.final-exams {
+    height: 450px;
+    background: #675AF0;
+    display: flex;
+    align-items: center;
+}
+
+.exams__items {
+    display: flex;
+    justify-content: space-between;
+}
+
+.exams__info h3 {
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -16,7 +39,7 @@
     margin-bottom: 19px;
 }
 
-.content__info span {
+.exams__info span {
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -25,28 +48,23 @@
     color: #FFFFFF;
 }
 
-.content__info__buttons {
+.info__buttons {
     gap: 16px;
     display: flex;
     margin-top: 45px;
 }
 
-.start__button {
+.btn__start {
     width: 129px;
 }
 
-.more__button {
+.btn__more {
     width: 129px;
 }
 
-.final-exams__content {
-    height: 450px;
-    background: #675AF0;
-    display: flex;
-    align-items: center;
-}
 
-.final-exams__items {
+
+.exams {
     display: flex;
     flex-direction: column;
     background: #F5F5FF;
@@ -55,7 +73,7 @@
     border-radius: 8px;
 }
 
-.final-exams__cards {
+.exams__cards {
     padding: 24px 18px;
     display: flex;
     justify-content: space-between;
@@ -64,13 +82,13 @@
     margin-bottom: 16px;
 }
 
-.final-exams__button {
+.exams__btn {
     width: 129px;
     margin: 0 auto;
     margin-bottom: 20px;
 }
 
-.entered-exam__content {
+.exam__content {
     padding: 24px 0 60px 0;
     display: flex;
     flex-direction: column;
@@ -78,11 +96,11 @@
     text-align: center;
 }
 
-.entered-exam__heading {
+.exam__heading {
     margin-bottom: 16px;
 }
 
-.entered-exam__heading h3 {
+.exam__heading h3 {
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -92,11 +110,11 @@
 
 
 
-.entered-exam__text {
+.exam__text {
     margin-bottom: 77px;
 }
 
-.entered-exam__text p {
+.exam__text p {
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
@@ -105,19 +123,14 @@
     color: #2B2A2A;
 }
 
-.entered-exam__icons {
+.exam__icons {
     margin-bottom: 26px;
     display: flex;
     gap: 16px;
 }
 
-.entered-exam__info {
+.exam__info {
     display: flex;
-}
-
-.info__content:nth-child(2) {
-    margin-left: 90px;
-    margin-right: 130px;
 }
 
 .info__content {
@@ -125,6 +138,12 @@
     flex-direction: column;
     align-items: center;
 }
+
+.info__content:nth-child(2) {
+    margin-left: 90px;
+    margin-right: 130px;
+}
+
 
 .info__heading span {
     font-style: normal;
@@ -134,12 +153,12 @@
     color: #8A7E7E;
 }
 
-.info__button {
+.info__btn {
     width: 83px;
     margin-top: 16px;
 }
 
-.mathQuiz-about {
+.mathQuiz__about {
     width: 100%;
     background-image: url('../../assets/images/Desktop\ -\ 1.svg');
     background-position: center;
@@ -154,13 +173,13 @@
     align-items: center;
 }
 
-.participate__register {
+.register {
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-.participate__register h3 {
+.register h3 {
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -168,7 +187,7 @@
     color: #675AF0;
 }
 
-.participate__register span {
+.register span {
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -176,12 +195,12 @@
     color: #8A7E7E;
 }
 
-.participate__register__button {
+.register__btn {
     width: 118px;
     margin-top: 16px;
 }
 
-.participate__image {
+.content__image {
     width: 478px;
     height: 407px;
     background-image: url('../../assets/images/2293220\ 1.svg');
@@ -190,18 +209,18 @@
     background-size: cover;
 }
 
-.participate__image img {
+.content__image img {
     width: 100%;
     height: 100%;
 }
 
-.why-mathQuiz {
+.why__mathQuiz {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.why-mathQuiz__image {
+.content__image {
     width: 407px;
     height: 407px;
     background-image: url('../../assets/images/3964546\ 1.svg');
@@ -210,18 +229,18 @@
     background-size: cover;
 }
 
-.why-mathQuiz__image img {
+.content__image img {
     width: 100%;
     height: 100%;
 }
 
 
 
-.why-mathQuiz__info__heading {
+.info__heading {
     margin-bottom: 31px;
 }
 
-.why-mathQuiz__info__heading h3 {
+.info__heading h3 {
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -229,13 +248,13 @@
     color: #675AF0;
 }
 
-.why-mathQuiz__info__text {
+.info__text {
     gap: 60px;
     display: flex;
     flex-direction: column;
 }
 
-.why-mathQuiz__info__text span {
+.info__text span {
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -244,23 +263,23 @@
 }
 
 
-.my-students {
+.students {
     width: 100%;
     padding-bottom: 190px;
 }
 
-.my-students__cards {
+.students__cards {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
-.my-students__heading {
+.students__heading {
     text-align: center;
     margin-bottom: 30px;
 }
 
-.my-students__heading h3 {
+.students__heading h3 {
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -268,7 +287,7 @@
     color: #675AF0;
 }
 
-.my-students__button {
+.students__btn {
     width: 129px;
     margin: 0 auto;
 }
