--- a/src/companents/DarkMode/DarkMode.module.css
+++ b/src/companents/DarkMode/DarkMode.module.css
@@ -22,7 +22,11 @@
     transition: all 0.5s ease-in-out;
 
 }
-.default{
+.spin-toggle{
     left: 100%;
     transform: translate(calc(-100% - 15% ) ,-50%);
+    background-color: #302B2B;
+}
+.dark-toggle{
+    background-color: #675AF0;
 }
