--- a/src/sections/PanelList/PanelList.module.css
+++ b/src/sections/PanelList/PanelList.module.css
@@ -30,12 +30,12 @@
 .darkList span{
     color: #FFFFFF;
 }
-.darkList img{
-    color: white;
+.panel{
+    width: 100%;
+    display: flex;
 }
-
-.panel-list {
-    width: 310px;
+.panel__list {
+    width: 21%;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -44,13 +44,13 @@
     box-shadow: 0px 0px 40px -3px rgba(0, 0, 0, 0.15);
 }
 
-.panel-list__title {
+.panel__list__title {
     text-align: center;
     margin-bottom: 33px;
     cursor: pointer;
 }
 
-.panel-list__title h3 {
+.panel__list__title h3 {
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -97,4 +97,8 @@ ul li:nth-child(2) {
 
 .list-parent li span{
     color: white;
+}
+
+.panel__user-profile{
+    flex-grow: 1;
 }
