--- a/src/sections/PanelList/PanelList.module.css
+++ b/src/sections/PanelList/PanelList.module.css
@@ -10,13 +10,6 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-.container {
-    max-width: 1072px;
-    width: 100%;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
 .dark {
     background: #2B2A2A;
     width: 310px;
@@ -30,18 +23,15 @@
 .darkList span{
     color: #FFFFFF;
 }
-.panel{
-    width: 100%;
-    display: flex;
-}
 .panel__list {
     width: 21%;
     height: 100vh;
     display: flex;
+    background: #FFFFFF;
     flex-direction: column;
     padding-top: 46px;
-    background: #FFFFFF;
     box-shadow: 0px 0px 40px -3px rgba(0, 0, 0, 0.15);
+    z-index: 9999;
 }
 
 .panel__list__title {
