--- a/src/sections/UserProfile/UserProfile.module.css
+++ b/src/sections/UserProfile/UserProfile.module.css
@@ -1,5 +1,20 @@
 .user-profile{
-    width: 100%;
     padding: 35px 48px;
     background-color: #FFFFFF;
+    display: flex;
+    justify-content: space-between;
+    flex-grow: 1;
+    height: 100%;
+}
+.heading h3{
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 33px;
+color: #2B2A2A;
+}
+.gmail{
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
