--- a/src/companents/DarkMode/DarkMode.module.css
+++ b/src/companents/DarkMode/DarkMode.module.css
@@ -1,11 +1,12 @@
 .darkmode {
-    width: 30%;
+    width: 100%;
     height: 30px;
     background: #E2E2E2;
     border-radius: 30px;
     cursor: pointer;
     position: relative;
     transition: all 0.5s ease-in-out;
+    flex-shrink: 1;
 }
 
 .spin {
