--- a/src/sections/PanelList/PanelList.module.css
+++ b/src/sections/PanelList/PanelList.module.css
@@ -10,33 +10,43 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+.container {
+    max-width: 1072px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
 .dark {
     background: #2B2A2A;
     width: 310px;
     height: 100vh;
     display: flex;
     flex-direction: column;
-    padding-top: 46px;
     box-shadow: 0px 0px 40px -3px rgba(0, 0, 0, 0.15);
+    z-index: 9999;
+    padding: 50px;
 }
 
-.darkList span{
+.darkList span {
     color: #FFFFFF;
 }
+
 .panel__list {
-    width: 21%;
+    width: 310px;
     height: 100vh;
     display: flex;
     background: #FFFFFF;
     flex-direction: column;
-    padding-top: 46px;
     box-shadow: 0px 0px 40px -3px rgba(0, 0, 0, 0.15);
     z-index: 9999;
+    padding: 50px;
 }
 
 .panel__list__title {
+    width: 100%;
     text-align: center;
-    margin-bottom: 33px;
+    margin-bottom: 50px;
     cursor: pointer;
 }
 
@@ -48,31 +58,12 @@
     color: #675AF0;
 }
 
-.box {
-    width: 194px;
-    height: 47px;
-    background: #675AF0;
-    border-radius: 12px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 14px;
-}
-
-.box span {
-    color: #FFFFFF;
-}
-
 ul li {
     width: 100%;
     height: 79px;
-    display: flex;
-    align-items: center;
-    padding-left: 78px;
-    gap: 14px;
 }
 
-ul li span {
+.nav span {
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -81,14 +72,24 @@ ul li span {
 }
 
 
-ul li:nth-child(2) {
-    padding-left: 58px;
-}
-
-.list-parent li span{
-    color: white;
-}
-
-.panel__user-profile{
+.panel__user-profile {
     flex-grow: 1;
+}
+
+.nav {
+    width: 100%;
+    display: flex;
+    gap: 14px;
+    padding: 12px 0;
+    border-radius: 12px;
+}
+.nav:active{
+    background-color:#675AF0;
+    justify-content: center;
+}
+.nav:active span{
+    color: #FFFFFF;
+}
+.darkmode {
+    width: 60px;
 }
