--- a/src/sections/UserProfile/UserProfile.module.css
+++ b/src/sections/UserProfile/UserProfile.module.css
@@ -18,3 +18,10 @@ color: #2B2A2A;
     align-items: center;
     gap: 20px;
 }
+.gmail span{
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 21px;
+color: #2B2A2A;
+}
