--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -16,6 +16,7 @@
     margin: 0 auto;
     padding: 0 20px;
 }
+
 .login {
     width: 100%;
     padding: 82px 53px;
@@ -77,23 +78,25 @@
     margin-bottom: 20px;
 }
 
-.input-password{
+.input-password {
     width: 100%;
     position: relative;
     margin-top: 16px;
 }
-.input-password img{
-position: absolute;
-bottom: 50%;
-right: 0;
-transform: translate(-50%,100%);
-cursor: pointer;
+
+.input-password img {
+    position: absolute;
+    bottom: 50%;
+    right: 0;
+    transform: translate(-50%, 100%);
+    cursor: pointer;
 }
 
 .forgot-password {
     display: flex;
     justify-content: flex-end;
     margin-top: 6px;
+    margin-bottom: 20px;
 }
 
 .forgot-password__link {
@@ -120,7 +123,7 @@ cursor: pointer;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 22px;
+    line-height: 21px;
     color: #8A7E7E;
 }
 
