--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -148,6 +148,7 @@ cursor: pointer;
     font-size: 14px;
     line-height: 19px;
     color: #8A7E7E;
+    margin-bottom: 20px;
 }
 
 .forgot-password__link {
