--- a/src/companents/DarkMode/DarkMode.module.css
+++ b/src/companents/DarkMode/DarkMode.module.css
@@ -23,11 +23,11 @@
     transition: all 0.5s ease-in-out;
 
 }
-.spin-toggle{
-    left: 100%;
-    transform: translate(calc(-100% - 15% ) ,-50%);
-    background-color: #302B2B;
-}
-.dark-toggle{
+.active{
     background-color: #675AF0;
+}
+.active .spin{
+    left: 100%;
+    transform: translate(calc(-100% - 15%), -50%);
+    background-color: #FFFFFF;
 }
