--- a/src/companents/Exam/Exam.module.css
+++ b/src/companents/Exam/Exam.module.css
@@ -21,7 +21,7 @@
     background: #FFFFFF;
     box-shadow: 0px 0px 32px -3px rgba(0, 0, 0, 0.15);
     border-radius: 8px;
-    width: 21%;
+    width: 199px;
     cursor: pointer;
 }
 
