--- a/src/sections/Exams/Exams.module.css
+++ b/src/sections/Exams/Exams.module.css
@@ -10,40 +10,54 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-.exams{
+.exams {
     width: 100%;
     display: flex;
     flex-direction: column;
     background-color: #F6F6F6;
     flex-grow: 1;
-    padding: 20px 30px;
+    padding: 0 30px;
 }
-.research{
+
+.research {
     width: 100%;
+    padding: 20px 0;
 }
-.search{
+
+.search {
     width: 360px;
+    display: flex;
+    border: 1px solid #FFFFFF;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 32px -3px rgba(0, 0, 0, 0.15);
+    border-radius: 6px;
+    padding: 0 10px;
 }
-.select{
-display: flex;
-gap: 15px;
+
+.select {
+    display: flex;
+    gap: 15px;
 }
-.select__type{
+
+.select__type {
     width: 163px;
     position: relative;
 }
-.select__price{
+
+.select__price {
     width: 163px;
     position: relative;
 }
-.form{
+
+.form {
     display: flex;
     justify-content: space-between;
 }
-.select__type img{
+
+.select__type img {
     position: absolute;
     bottom: 50%;
-    transform: translate(-5px,50%);
+    transform: translate(-5px, 50%);
     right: 0;
     cursor: pointer;
 }
@@ -51,10 +65,18 @@ gap: 15px;
 
 
 
-.select__price img{
+.select__price img {
     position: absolute;
     bottom: 50%;
-    transform: translate(-5px,50%);
+    transform: translate(-5px, 50%);
     right: 0;
     cursor: pointer;
+}
+
+.final-exams {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 20px 0;
+    gap: 20px;
 }
