--- a/src/sections/Input/Input.module.css
+++ b/src/sections/Input/Input.module.css
@@ -20,7 +20,6 @@
     font-size: 14px;
     line-height: 21px;
     color: #8A7E7E;
-    cursor: pointer;
 }
 
 .label {
@@ -61,3 +60,7 @@
     color: #FFFFFF;
 }
 
+
+.input--cursor{
+    cursor: pointer;
+}
