--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -17,10 +17,15 @@
 
 
 
+.dashboard__content{
+    width: 100%;
+}
+
 .user-profile{
     width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
+    height: 100px;
+}
+.components{
+    width: 100%;
+      padding: 40px 30px;
 }
