--- a/src/companents/About/About.module.css
+++ b/src/companents/About/About.module.css
@@ -1,16 +1,14 @@
-.about {
+.teachers {
     width: 100%;
     padding: 30px;
     background: #FFFFFF;
     box-shadow: 0px 0px 32px -3px rgba(0, 0, 0, 0.15);
     border-radius: 14px;
+    max-height: 550px;
+    height: 100%;
+    overflow-y: scroll;
 }
 
-
-.teachers{
-    overflow: hidden;
-}
-
-.teachers :last-child{
+.teachers :last-child {
     margin: 0;
 }
