--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -17,15 +17,18 @@
 
 
 
-.dashboard__content{
+.dashboard__content {
     width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
-.user-profile{
+.user-profile {
     width: 100%;
     height: 100px;
 }
-.components{
+
+.components {
     width: 100%;
-      padding: 40px 30px;
+    padding: 40px 30px;
 }
