--- a/src/sections/UserProfile/UserProfile.module.css
+++ b/src/sections/UserProfile/UserProfile.module.css
@@ -1,27 +1,32 @@
-.user-profile{
-    padding: 35px 48px;
+.user-profile {
     background-color: #FFFFFF;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding: 0 30px;
     flex-grow: 1;
     height: 100%;
+    height: 103px;
 }
-.heading h3{
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 33px;
-color: #2B2A2A;
+
+.heading h3 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 33px;
+    color: #2B2A2A;
 }
-.gmail{
+
+.gmail {
     display: flex;
     align-items: center;
     gap: 20px;
 }
-.gmail span{
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 21px;
-color: #2B2A2A;
+
+.gmail span {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 21px;
+    color: #2B2A2A;
 }
