--- a/src/sections/PanelList/PanelList.module.css
+++ b/src/sections/PanelList/PanelList.module.css
@@ -19,6 +19,9 @@
     box-shadow: 0px 0px 40px -3px rgba(0, 0, 0, 0.15);
     z-index: 9999;
     padding: 50px;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .panel-list__title {
