--- a/src/sections/UserProfile/UserProfile.module.css
+++ b/src/sections/UserProfile/UserProfile.module.css
@@ -4,9 +4,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 30px;
-    flex-grow: 1;
-    height: 100%;
-    height: 103px;
+    width: 100%;
+    height: 103px;      
 }
 
 .heading h3 {
