--- a/src/companents/Exams/Exams.module.css
+++ b/src/companents/Exams/Exams.module.css
@@ -14,9 +14,8 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    background-color: #F6F6F6;
     flex-grow: 1;
-    padding: 0 30px;
+    /* padding: 0 30px; */
 }
 
 .research {
