--- a/src/companents/VideoCard/VideoCard.module.css
+++ b/src/companents/VideoCard/VideoCard.module.css
@@ -5,3 +5,39 @@
     box-shadow: 0px 0px 32px -3px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
 }
+.video{
+    width: 100%;
+    height: 130px;
+    border-radius: 10px;
+}
+.btn{
+    width: 108px;
+}
+.content{
+    padding: 10px 15px;
+}
+.items{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+.items span{
+font-style: normal;
+font-weight: 700;
+font-size: 12px;
+line-height: 16px;
+color: #D54949;
+}
+.class{
+    margin-bottom: 56px;
+}
+.class span{
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 21px;
+color: #2B2A2A;
+}
+.video{
+    overflow: hidden;   
+}
