--- a/src/companents/ExamQuestions/ExamQuestion.module.css
+++ b/src/companents/ExamQuestions/ExamQuestion.module.css
@@ -31,15 +31,15 @@
 }
 
 .exam-time {
-    width: 280px;
+    width: 300px;
     height: 46px;
     background: #FFFFFF;
     border: 1px solid #D2D2D2;
     border-radius: 10px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     padding: 0 14px;
+    gap: 14px;
 }
 
 .exam-time span {
@@ -55,10 +55,11 @@
     gap: 77px;
 }
 .timer{
+    width: 54px;
 font-style: normal;
 font-weight: 600;
 font-size: 16px;
 line-height: 27px;
-color: #2B2A2A;
 color: red;
+/* background-color: red;   */
 }
