--- a/src/companents/VideoCard/VideoCard.module.css
+++ b/src/companents/VideoCard/VideoCard.module.css
@@ -40,4 +40,14 @@ color: #2B2A2A;
 }
 .video{
     overflow: hidden;   
+    position: relative;
+}
+.play-btn{
+    width: 46px;
+    height: 46px;
+    border: 4px solid #E2E2E2;
+    position: absolute;
+      top: 0;
+      left: 0;
+      border-radius: 50%;
 }
